--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,9 @@ production_url : http://maps.robertomurray.co.uk
 content_image_path: /assets/images
 
 # enable [true] for production
-prod: true
+prod: false
 
-# Jekyll config
-
+# Build settings
+markdown: kramdown
 permalink: /:title
-
 exclude: ["README.md", ".gitignore", "Gemfile", "Gemfile.lock", "vendor", ".rvmrc", ".rbenv-version", "Rakefile", "s3_website.yml"]
-
-markdown: redcarpet
-
-
